# PM-Swarn

./: .env.example  .gitignore  Dockerfile  README.md  SKELETON_README.md  pyproject.toml
.beads/: BEAD-001.bead  BEAD-002.bead  registry.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  AvantoDev-Strata-team-repository-descriptions.md  AvantoDev-repository-descriptions.md  DEVELOPER_GUIDE.md  DOCUMENTATION_STRUCTURE.md  INTEGRATION_GUIDE.md  OPERATIONS_FIELD_CREATION_REQUEST.md  PO-GUIDE-TRANSLATIONS-AND-NOCODE.md  PRD for PM Swarn with Beadbox.md  PRD for PM Swarn.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_v2.0.0.md  SCHEMA_VERIFICATION.md  Strata Dev Framework The compounding AI Playbook 2.md  TRAINING_SESSION_GUIDE.md
docs/AI coding/: 01-ai-coding-tools-installation-guide.md
docs/analysis/: AUTHENTICATION_TROUBLESHOOTING.md  CODE_REVIEW.md  FIELD_MAPPING_CACHING_REVIEW.md  MAPPING_AND_TRANSLATION_REVIEW.md  UPDATE_ACKNOWLEDGMENT_ERROR_ANALYSIS.md  WHY_FETCH_AFTER_CREATE_EXPLANATION.md  WHY_NOT_TRANSFORM_CREATION_RESPONSE.md
docs/archive/: CLEANUP_SUMMARY.md  FIELD_REQUIREMENTS_CONFIRMATION.md  FIELD_VERIFICATION_FINAL_REPORT.md  IN-48_IMPLEMENTATION_PLAN.md  IN-48_IMPLEMENTATION_SUMMARY.md  PO_TEST_VALUES.md  SCHEMA_COMPARISON.md  SCHEMA_DATABASE_VERIFICATION_REPORT.md  SCHEMA_PERSISTENCE_ANALYSIS.md  SCHEMA_VERIFICATION_SUMMARY.md  SHIPPING_NOTICE_IMPLEMENTATION_PLAN.md  SHIPPING_NOTICE_IMPLEMENTATION_SUMMARY.md
docs/audit/: 2026-03-04-repo-compliance-audit.md  README.md
src/: main.py
tests/: __init__.py  test_main.py
tmp/: update_story.py
(+50 files in other folders)
